# hulk

./: .gitignore  BUILD  MODULE.bazel  go.mod  go.sum  go_sdk.bzl  rules_jvm_external++maven+mvn_install.json
com/tm/docker/: README.md  docker-compose.yml  hbase-site.xml  prometheus.yml  run.sh  run_checkfriends.sh  stop_checkfriends.sh
com/tm/docker/hadoop-conf/: core-site.xml  hdfs-site.xml
com/tm/go/: BUILD  http.go  main.go
com/tm/go/clickhouse_producer/: BUILD.bazel  README.md  main.go  models.go
com/tm/go/elasticsearch/: BUILD  go.mod  search_main.go
com/tm/go/elasticsearch/api/: BUILD  handler.go
com/tm/go/elasticsearch/client/: BUILD  client.go
com/tm/go/elasticsearch/generatedata/: BUILD  generate.go
com/tm/go/grpc/: BUILD  go.mod  grpc_main.go
com/tm/go/grpc_client/: BUILD  grpc_client_main.go
com/tm/go/hbase_client/: BUILD  main.go
com/tm/go/kafka/mock_evn/: BUILD  evn_consumer.go
com/tm/go/momo/httpclient/: BUILD  README.md  checkfriends.go
com/tm/go/rabbitmp_producer/: BUILD  README.md  competing_consumers.go  demo_direct.go  direct_exchange.go  main.go  priority_queue.go  publish_subscribe.go  rpc_pattern.go  simple_queue.go  test_direct_exchange.go
com/tm/go/user_behavior/: BUILD  README.md  aggregation_job.go  behavior_analyzer.go  bigquery_writer.go  errors.go  event_collector.go  hbase_writer.go  main.go  models.go  session_manager.go
com/tm/go/user_behavior/cmd/: main.go
com/tm/go/websocket/: BUILD  main.go  websocket_main.go
com/tm/go/websocket_client/: BUILD  main.go  websocket_client_main.go
com/tm/java/common/annotation/: BUILD  VerticleMapKey.java
com/tm/java/common/module/: BUILD  BaseModule.java  BindingModule.java
com/tm/java/consumer/: BUILD  ConsumerComponent.java  ConsumerModule.java  Main.java
com/tm/java/interview/: BUILD  Main.java
com/tm/java/service/image/: BUILD  ConvertBase64Main.java  image.txt
com/tm/js/: testjson.js
com/tm/kotlin/: BUILD  Main.kt
com/tm/kotlin/backupdata/: BUILD  BackupDataComponent.kt  BackupDataMain.kt  BackupDataModule.kt  BackupDataService.kt  CassandraDataAccess.kt  CircuitBreaker.kt  DataAccessException.kt  HBaseDataAccess.kt
com/tm/kotlin/cassandra/: BUILD  CassandraClient.kt  CassandraTest.kt
com/tm/kotlin/circuitbreaker/client/: BUILD  CircuitBreakerClient.kt  CircuitBreakerClientComponent.kt  CircuitBreakerClientModule.kt  CircuitBreakerClientVerticle.kt
com/tm/kotlin/circuitbreaker/server/: BUILD  CircuitBreakerServer.kt  CircuitBreakerServerComponent.kt  CircuitBreakerServerModule.kt  CircuitBreakerServerVerticle.kt  TestHandler.kt
com/tm/kotlin/common/cassandra/: BUILD  CassandraClient.kt  CassandraTest.kt
com/tm/kotlin/common/error/: BUILD  ErrorCode.kt  HulkException.kt
com/tm/kotlin/common/hbase/: BUILD  HBaseClient.kt  HBaseClientFactory.kt  HBaseTest.kt  IHBaseClient.kt
com/tm/kotlin/common/http/: API.kt  BUILD  HttpFactory.kt  MHttpFactory.kt  VHttp.kt
com/tm/kotlin/common/utils/: BUILD  PhoneUtils.kt
com/tm/kotlin/download/: BUILD  DownloadMain.kt  DownloadVerticle.kt
com/tm/kotlin/friendrecommend/: BUILD  FriendRecommendComponent.kt  FriendRecommendHttpVerticle.kt  FriendRecommendMain.kt  FriendRecommendModule.kt
com/tm/kotlin/gcp/bigquery/: BUILD  Main.kt
com/tm/kotlin/gcp/iam/: BUILD  README.md
com/tm/kotlin/hbase_load_test/: BUILD  HBaseLoadTestMain.kt  ServiceComponent.kt  ServiceModule.kt
com/tm/kotlin/hbase_load_test/verticles/: BaseLoadTestVerticle.kt  DataCreatorVerticle.kt  FixedEndLoadTestVerticle.kt  FixedStartLoadTestVerticle.kt  RandomRangeLoadTestVerticle.kt  RandomSubsetLoadTestVerticle.kt
com/tm/kotlin/kafka_flink/: README.md  word_count_demo.sh
com/tm/kotlin/kafka_flink/consumer/: BUILD  WordCountConsumer.kt
com/tm/kotlin/kafka_flink/producer/: BUILD  WordCountProducer.kt
com/tm/kotlin/service/bitmap_loadtest/: BUILD  Helper.kt  Main.kt  ServiceComponent.kt  ServiceModule.kt
com/tm/kotlin/service/coroutine_demo/: BUILD  DemoMain.kt  Handler.kt  VRoute.kt
com/tm/kotlin/service/counter/: BUILD  CLEAN_ARCHITECTURE.md  CounterDataModels.kt  CounterMain.kt  ServiceComponent.kt  ServiceModule.kt
com/tm/kotlin/service/friend/: BUILD  FriendMain.kt  ServiceComponent.kt  ServiceModule.kt
com/tm/kotlin/service/grpc/: QUICKSTART.md  README.md
com/tm/kotlin/service/hbase_bulkload/: BUILD  BulkLoadComponent.kt  BulkLoadConfig.kt  BulkLoadModule.kt  BulkLoadV1Verticle.kt  BulkLoadV2WithDeletesVerticle.kt  Dockerfile.simple  HFileV1GeneratorVerticle.kt  HFileV2GeneratorVerticle.kt  Main.kt  QueryHelper.kt  README.md  SegmentGeneratorVerticle.kt  SegmentQueryVerticle.kt  TROUBLESHOOTING.md  rebuild.sh  reset-table.sh
com/tm/kotlin/service/latency_api_test/: BUILD  PandoraApiMain.kt  PandoraClientVerticle.kt
com/tm/kotlin/service/openapi/: BUILD  HttpServer1Verticle.kt  HttpServerVerticle.kt  OpenApiComponent.kt  OpenApiMain.kt  OpenApiModule.kt  openapi.yaml
com/tm/kotlin/service/rabbitmp_consumer/: BUILD  CompetingConsumerVerticle.kt  ConsumerMain.kt  DirectExchangeConsumerVerticle.kt  PriorityQueueConsumerVerticle.kt  PublishSubscribeConsumerVerticle.kt  (+3 more)
com/tm/kotlin/service_framework/: App.kt  AppComponent.kt  AppModule.kt  BUILD
com/tm/kotlin/ws/: BUILD  WsServer.kt
com/tm/python/langchain/: .env.template  BUILD  README.md  chat_example.py  demo.py  hbase_data_generator.py  lang_smith.py  llm_chain.py  rag_example.py  requirements.txt  requirements_lock.txt  run_spam_detection.py  simple_chain.py  spam_detector_hbase.py  spam_detector_rag.py  spam_detector_simple.py  test_hbase_connection.py  test_hbase_workflow.py
go-server/: BUILD
go-server/websocket/: BUILD  main.go
go-server/websocket/test/: loadtest.js
java-server/: BUILD  JavaServerVertical.java
kotlin-server/: BUILD  Main.kt
kotlin-server/consumer/: BUILD  ConsumerVertical.kt  HighPriorityWorkerVertical.kt  LowPriorityWorkerVertical.kt  Main.kt  MonitoringVerticle.kt  docker-compose.yml  prometheus.yml
kotlin-server/producer/: BUILD  Producer.kt
plugins/: BUILD
tools/plugins/: BUILD
tools/rules/: com_tm_container.bzl
(+132 files in other folders)
