module(name = "hulk")

# Go
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.1")
bazel_dep(name = "protobuf", version = "29.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_gorilla_websocket", "com_github_prometheus_client_golang")

#Java/kotlin
bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_java", version = "8.11.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.vertx:vertx-core:4.5.13",
        "io.vertx:vertx-web:4.5.13",
        "io.vertx:vertx-redis-client:4.5.13",
        "org.apache.kafka:kafka-clients:4.0.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "io.micrometer:micrometer-registry-prometheus:1.14.5",
        "com.google.dagger:dagger:2.56",
        "com.google.dagger:dagger-compiler:2.56",
        "com.google.dagger:dagger-producers:2.56",
        "javax.inject:javax.inject:1",
        "com.google.auto.value:auto-value-annotations:1.11.0",
        "com.google.code.gson:gson:2.12.1",
        "javax.annotation:javax.annotation-api:1.3.2",
        "com.google.auto:auto-common:1.2.2",
        "com.datastax.oss:java-driver-core:4.17.0",
        "org.apache.hbase:hbase-client:2.6.2",
        "org.apache.hbase:hbase-common:2.6.2",
        "org.apache.hadoop:hadoop-common:3.4.1",
        "org.roaringbitmap:RoaringBitmap:1.3.0",
        "com.google.cloud:google-cloud-bigquery:2.49.0",
        "com.google.auth:google-auth-library-oauth2-http:1.33.1",
        "com.google.cloud:google-cloud-core:2.54.0",
        "com.google.cloud:google-cloud-storage:2.50.0",
        "com.google.api:gax-grpc:2.35.0",
        "com.opencsv:opencsv:5.10",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
